// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $1,762.95
  </p>
</div>
`;

exports[`should render correct summary for 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1,095.00
  </p>
</div>
`;

exports[`should render correct summary for no expense 1`] = `
<div>
  <p>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </p>
</div>
`;
